# MacViber

./: .gitignore  ARCHITECTURE.md  CHANGELOG_2026-01-23.md  DEVELOPMENT_GUIDE.md  LICENSE  Package.resolved  Package.swift  README.md  claude-dev.md  codex-dev.md  gemini-guide-tauri.md  package-lock.json
LocalPackages/SwiftTerm/: Package.swift
MacViber/App/: MacViberApp.swift
MacViber/Backend/Core/: Logger.swift
MacViber/Backend/FFI/: RustCore.swift
MacViber/Core/Parser/: CustomPatternMatcher.swift
MacViber/Core/Terminal/: TerminalController.swift
MacViber/Domain/Models/: CustomPattern.swift  MinimizedPane.swift  Note.swift  TerminalSettings.swift  TerminalTheme.swift  UpdatePreferences.swift
MacViber/Domain/Services/: FavoritesManager.swift  NoteManager.swift  NotificationPreferencesManager.swift  SessionManager.swift  SyntaxHighlightingInstaller.swift  TerminalSettingsManager.swift  (+2 more)
MacViber/Resources/: Info.plist
MultiTerm/App/: MultiTermApp.swift
MultiTerm/Core/: Logger.swift
MultiTerm/Resources/: Info.plist
Scripts/: build-app.sh  build.sh  create-dmg.sh  install-app.sh  setup.sh
Tests/: FFITest.swift
core/: Cargo.toml  build.rs  cbindgen.toml
core/include/: macviber_core.h  module.modulemap
core/src/: ffi.rs  lib.rs
core/src/models/: mod.rs  notification.rs  session.rs  split_node.rs
core/src/services/: mod.rs  notification_detector.rs  pattern_matcher.rs
core/src/terminal/: mod.rs  pty.rs
docs/: FOCUS_RESTORATION_FIX.md
memory/: 00_README.md  01_project_structure.md  02_migration_considerations.md  03_lessons_learned.md
(+70 files in other folders)
