[package]
name = "macviber-core"
version = "0.1.0"
edition = "2021"
authors = ["MacViber Team"]
description = "Cross-platform terminal backend core for MacViber"

[lib]
name = "macviber_core"
crate-type = ["staticlib", "cdylib"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# PTY handling (cross-platform)
portable-pty = "0.8"

# Regex for pattern matching
regex = "1.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Logging
log = "0.4"
env_logger = "0.10"

# Thread-safe primitives
parking_lot = "0.12"
crossbeam-channel = "0.5"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[build-dependencies]
cbindgen = "0.26"

[profile.release]
opt-level = 3
lto = true
